Mesh Sequence Cache modifier ignores relative path default setting #86063

Closed
opened 2021-02-27 22:59:09 +01:00 by Daniel Salazar · 6 comments
Member

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-24 20:53, hash: 01e13e2c95

Short description of error

Exact steps for others to reproduce the error
Set your user preferences to default to Relative Paths
image.png
Unpack the following files
Alembic.zip
Open Char.blend
The cache modifier currently links to "//Side to Side.abc"
Click on the folder icon of the datablock type (not the filepath)
Folder.png
Load the included "Squash.abc" file.
Doing it this way will create an absolute path
image.png

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-24 20:53, hash: `01e13e2c95` **Short description of error** **Exact steps for others to reproduce the error** Set your user preferences to default to Relative Paths ![image.png](https://archive.blender.org/developer/F9848709/image.png) Unpack the following files [Alembic.zip](https://archive.blender.org/developer/F9848735/Alembic.zip) Open Char.blend The cache modifier currently links to "//Side to Side.abc" Click on the folder icon of the datablock type (not the filepath) ![Folder.png](https://archive.blender.org/developer/F9848752/Folder.png) Load the included "Squash.abc" file. Doing it this way will create an absolute path ![image.png](https://archive.blender.org/developer/F9848757/image.png)
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2021-03-01 16:35:13 +01:00
Member

Can confirm the behavior.

It is not a bug per se (since this preference is only for the operators that actually have the Relative Path setting -- which CACHEFILE_OT_open just does not have).
But it is a nice and straightforward quality of life improvement, so will keep as TODO.

Can confirm the behavior. It is not a bug per se (since this preference is only for the operators that actually have the `Relative Path` setting -- which `CACHEFILE_OT_open` just does not have). But it is a nice and straightforward quality of life improvement, so will keep as TODO.

This issue was referenced by a6a8ca9212

This issue was referenced by a6a8ca9212108de9a2fad2a67a86d81efdf5ada3
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86063
No description provided.