source/blender/editors/io/io_cache.c
@@ -131,7 +131,7 @@ void CACHEFILE_OT_open(wmOperatorType *ot)
                                  FILE_TYPE_ALEMBIC | FILE_TYPE_FOLDER,
                                  FILE_BLENDER,
                                  FILE_OPENFILE,
-                                 WM_FILESEL_FILEPATH,
+                                 WM_FILESEL_FILEPATH | WM_FILESEL_RELPATH,
                                  FILE_DEFAULTDISPLAY,
                                  FILE_SORT_DEFAULT);
 }
